@@ -10,29 +10,36 @@ import org.openqa.selenium.support.ui.WebDriverWait;
 import java.time.Duration;
 import java.util.List;
 
+// AJOUT : Import de assertNotNull
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class StoryFeatureIT extends AbstractIT {
 
     @Test
     public void testCreateAndDeleteStory() {
         driver.get(getBaseUrl() + "issues/new");
-        String storyTitle = "Story Test Selenium " + System.currentTimeMillis();
+
+        String fullTitle = "Story Test Selenium " + System.currentTimeMillis();
+        // Troncature à 30 chars
+        String expectedTitle = fullTitle.length() > 30 ? fullTitle.substring(0, 30) : fullTitle;
+
         WebElement titleInput = driver.findElement(By.name("title"));
         WebElement submitBtn = driver.findElement(By.cssSelector("button[type='submit']"));
-        titleInput.sendKeys(storyTitle);
+
+        titleInput.sendKeys(fullTitle);
         submitBtn.click();
 
         WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(5));
         wait.until(ExpectedConditions.urlContains("/issues"));
 
         WebElement storyCell = wait.until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath("//td[contains(text(), '" + storyTitle + "')]")
+                By.xpath("//td[contains(text(), '" + expectedTitle + "')]")
         ));
-        assertTrue(storyCell.isDisplayed(), "La story créée devrait être visible.");
+        assertTrue(storyCell.isDisplayed(), "La story créée (tronquée) devrait être visible.");
 
-        WebElement deleteBtn = driver.findElement(By.xpath("//tr[td[contains(text(), '" + storyTitle + "')]]//form//button"));
+        WebElement deleteBtn = driver.findElement(By.xpath("//tr[td[contains(text(), '" + expectedTitle + "')]]//form//button"));
         deleteBtn.click();
 
         wait.until(ExpectedConditions.alertIsPresent());
@@ -40,7 +47,9 @@ public class StoryFeatureIT extends AbstractIT {
         wait.until(ExpectedConditions.invisibilityOf(storyCell));
 
         String pageSource = driver.getPageSource();
-        assertFalse(pageSource.contains(storyTitle), "La story devrait avoir disparu après suppression.");
+        // CORRECTION WARNING : On vérifie que pageSource n'est pas null avant de l'utiliser
+        assertNotNull(pageSource, "Le code source de la page ne doit pas être null");
+        assertFalse(pageSource.contains(expectedTitle), "La story devrait avoir disparu après suppression.");
     }
 
     @Test
@@ -50,7 +59,15 @@ public class StoryFeatureIT extends AbstractIT {
         WebElement toBoardBtn = wait.until(ExpectedConditions.elementToBeClickable(By.id("btn-to-board")));
         toBoardBtn.click();
         wait.until(ExpectedConditions.urlContains("/board"));
-        assertTrue(driver.getTitle().contains("Board") || driver.getPageSource().contains("Kanbin"),
+
+        // CORRECTION WARNING : On extrait les variables et on gère le null
+        String title = driver.getTitle();
+        String content = driver.getPageSource();
+
+        boolean titleOk = title != null && title.contains("Board");
+        boolean contentOk = content != null && content.contains("Kanbin");
+
+        assertTrue(titleOk || contentOk,
                 "Devrait être arrivé sur la page du Board");
     }
 
@@ -58,6 +75,8 @@ public class StoryFeatureIT extends AbstractIT {
     public void testRenameStory() {
         driver.get(getBaseUrl() + "issues/new");
         String originalTitle = "Original Name " + System.currentTimeMillis();
+        String expectedOriginal = originalTitle.length() > 30 ? originalTitle.substring(0, 30) : originalTitle;
+
         WebElement titleInput = driver.findElement(By.name("title"));
         titleInput.sendKeys(originalTitle);
         driver.findElement(By.cssSelector("button[type='submit']")).click();
@@ -65,28 +84,33 @@ public class StoryFeatureIT extends AbstractIT {
         WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(5));
         wait.until(ExpectedConditions.urlContains("/issues"));
 
-        By rowLocator = By.xpath("//tr[td[contains(text(), '" + originalTitle + "')]]");
+        By rowLocator = By.xpath("//tr[td[contains(text(), '" + expectedOriginal + "')]]");
         wait.until(ExpectedConditions.presenceOfElementLocated(rowLocator));
 
         WebElement editBtn = driver.findElement(
-                By.xpath("//tr[td[contains(text(), '" + originalTitle + "')]]//a[contains(@href, '/edit')]")
+                By.xpath("//tr[td[contains(text(), '" + expectedOriginal + "')]]//a[contains(@href, '/edit')]")
         );
         editBtn.click();
-        // ----------------------
 
         WebElement input = wait.until(ExpectedConditions.visibilityOfElementLocated(By.id("issueTitle")));
         input.clear();
         String newTitle = "Renamed Name " + System.currentTimeMillis();
+        String expectedNew = newTitle.length() > 30 ? newTitle.substring(0, 30) : newTitle;
+
         input.sendKeys(newTitle);
         driver.findElement(By.cssSelector("button[type='submit']")).click();
 
         wait.until(ExpectedConditions.urlContains("/issues"));
         wait.until(ExpectedConditions.visibilityOfElementLocated(
-                By.xpath("//td[contains(text(), '" + newTitle + "')]")
+                By.xpath("//td[contains(text(), '" + expectedNew + "')]")
         ));
+
         String pageSource = driver.getPageSource();
-        assertFalse(pageSource.contains(originalTitle), "L'ancien titre ne devrait plus être visible");
-        assertTrue(pageSource.contains(newTitle), "Le nouveau titre devrait être affiché");
+        // CORRECTION WARNING : Vérification nullité
+        assertNotNull(pageSource, "Le code source de la page ne doit pas être null");
+
+        assertFalse(pageSource.contains(expectedOriginal), "L'ancien titre ne devrait plus être visible");
+        assertTrue(pageSource.contains(expectedNew), "Le nouveau titre (tronqué) devrait être affiché");
     }
 
     @Test
@@ -123,7 +147,7 @@ public class StoryFeatureIT extends AbstractIT {
         ));
 
         List<WebElement> dropZones = driver.findElements(By.className("kb-col-body"));
-        WebElement targetZone = dropZones.get(dropZones.size() - 1);
+        WebElement targetZone = dropZones.getLast();
 
         // 5. Exécution du Drag & Drop
         simulateDragAndDrop(issueCard, targetZone);
